--- a/css/top-section.css
+++ b/css/top-section.css
@@ -17,7 +17,7 @@
 	margin-bottom: 5rem;
 	padding-top: 6%;
 	vertical-align: middle;
-	margin-right: 10rem;
+	margin-left: 4% !important;
 }
 
 .phone-img {
